{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 136,
  "lineage": "53ba4f00-2e44-7afe-950d-09ee01829a39",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "external_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.190.46.135",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-05-01T07:39:12.957-07:00",
            "id": "projects/revieve-public/global/addresses/revieve-external-ip",
            "name": "revieve-external-ip",
            "prefix_length": 0,
            "project": "revieve-public",
            "self_link": "https://www.googleapis.com/compute/v1/projects/revieve-public/global/addresses/revieve-external-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-05-03T03:07:32.472-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/revieve-public/global/backendServices/api-lb-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "65D0B4PjR38=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "*"
                ],
                "path_matcher": "allpaths"
              }
            ],
            "id": "projects/revieve-public/global/urlMaps/api-lb-url-map",
            "map_id": 4747172044817271947,
            "name": "api-lb-url-map",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/revieve-public/global/backendServices/api-lb-backend-default",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "allpaths",
                "path_rule": [
                  {
                    "paths": [
                      "/login"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/revieve-public/global/backendServices/api-lb-backend-frontend",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "revieve-public",
            "self_link": "https://www.googleapis.com/compute/v1/projects/revieve-public/global/urlMaps/api-lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "default_service"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "path_matcher"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "path_rule"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "service"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "path_matcher"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "default_service"
              }
            ]
          ],
          "dependencies": [
            "google_cloud_run_service.doit_easily_cloudrun_service",
            "google_compute_region_network_endpoint_group.api_lb_neg",
            "google_iap_brand.iap_brand",
            "google_iap_client.iap_client",
            "module.api-lb.google_compute_backend_service.default"
          ]
        }
      ]
    },
    {
      "module": "module.api-lb",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/revieve-public/regions/europe-west1/networkEndpointGroups/api-lb-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-05-03T03:06:59.804-07:00",
            "enable_cdn": false,
            "fingerprint": "fgK_SyihDRE=",
            "generated_id": 4537645604334963884,
            "iap": [
              {
                "oauth2_client_id": "516037450294-7q0dqfe6aoricb2ug6fp6512ae5tru7a.apps.googleusercontent.com",
                "oauth2_client_secret": "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",
                "oauth2_client_secret_sha256": "354b5553085cf5a4e8503a66531ede8f88299fe92d6a278cdad76c51abe4b17a"
              }
            ],
            "id": "projects/revieve-public/global/backendServices/api-lb-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "api-lb-backend-default",
            "port_name": "http",
            "project": "revieve-public",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/revieve-public/global/backendServices/api-lb-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "iap"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "oauth2_client_secret"
              }
            ]
          ],
          "dependencies": [
            "google_cloud_run_service.doit_easily_cloudrun_service",
            "google_compute_region_network_endpoint_group.api_lb_neg",
            "google_iap_brand.iap_brand",
            "google_iap_client.iap_client"
          ]
        },
        {
          "index_key": "frontend",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/revieve-public/regions/europe-west1/networkEndpointGroups/api-lb-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-05-03T03:06:59.253-07:00",
            "description": "public endpoint for frontend integration",
            "enable_cdn": false,
            "fingerprint": "WwWGJzB-2dc=",
            "generated_id": 7976607363983445164,
            "id": "projects/revieve-public/global/backendServices/api-lb-backend-frontend",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "api-lb-backend-frontend",
            "port_name": "http",
            "project": "revieve-public",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/revieve-public/global/backendServices/api-lb-backend-frontend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_cloud_run_service.doit_easily_cloudrun_service",
            "google_compute_region_network_endpoint_group.api_lb_neg",
            "google_iap_brand.iap_brand",
            "google_iap_client.iap_client"
          ]
        }
      ]
    },
    {
      "module": "module.api-lb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/revieve-public/global/forwardingRules/api-lb",
            "ip_address": "35.190.46.135",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "api-lb",
            "port_range": "80",
            "project": "revieve-public",
            "self_link": "https://www.googleapis.com/compute/beta/projects/revieve-public/global/forwardingRules/api-lb",
            "target": "https://www.googleapis.com/compute/v1/projects/revieve-public/global/targetHttpProxies/api-lb-http-proxy"
          },
          "dependencies": [
            "google_cloud_run_service.doit_easily_cloudrun_service",
            "google_compute_global_address.external_ip",
            "google_compute_region_network_endpoint_group.api_lb_neg",
            "google_compute_url_map.url_map",
            "google_iap_brand.iap_brand",
            "google_iap_client.iap_client",
            "module.api-lb.google_compute_backend_service.default",
            "module.api-lb.google_compute_global_address.default",
            "module.api-lb.google_compute_target_http_proxy.default",
            "module.api-lb.google_compute_url_map.default",
            "module.api-lb.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.api-lb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/revieve-public/global/forwardingRules/api-lb-https",
            "ip_address": "35.190.46.135",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "api-lb-https",
            "port_range": "443",
            "project": "revieve-public",
            "self_link": "https://www.googleapis.com/compute/beta/projects/revieve-public/global/forwardingRules/api-lb-https",
            "target": "https://www.googleapis.com/compute/v1/projects/revieve-public/global/targetHttpsProxies/api-lb-https-proxy"
          },
          "dependencies": [
            "google_cloud_run_service.doit_easily_cloudrun_service",
            "google_compute_global_address.external_ip",
            "google_compute_region_network_endpoint_group.api_lb_neg",
            "google_compute_url_map.url_map",
            "google_iap_brand.iap_brand",
            "google_iap_client.iap_client",
            "module.api-lb.google_compute_backend_service.default",
            "module.api-lb.google_compute_global_address.default",
            "module.api-lb.google_compute_managed_ssl_certificate.default",
            "module.api-lb.google_compute_ssl_certificate.default",
            "module.api-lb.google_compute_target_https_proxy.default",
            "module.api-lb.google_compute_url_map.default",
            "module.api-lb.random_id.certificate"
          ]
        }
      ]
    },
    {
      "module": "module.api-lb",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-05-03T03:07:44.266-07:00",
            "id": "projects/revieve-public/global/targetHttpProxies/api-lb-http-proxy",
            "name": "api-lb-http-proxy",
            "project": "revieve-public",
            "proxy_bind": false,
            "proxy_id": 8397906688937528479,
            "self_link": "https://www.googleapis.com/compute/v1/projects/revieve-public/global/targetHttpProxies/api-lb-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/revieve-public/global/urlMaps/api-lb-https-redirect"
          },
          "dependencies": [
            "google_cloud_run_service.doit_easily_cloudrun_service",
            "google_compute_region_network_endpoint_group.api_lb_neg",
            "google_compute_url_map.url_map",
            "google_iap_brand.iap_brand",
            "google_iap_client.iap_client",
            "module.api-lb.google_compute_backend_service.default",
            "module.api-lb.google_compute_url_map.default",
            "module.api-lb.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.api-lb",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-05-03T03:07:44.270-07:00",
            "id": "projects/revieve-public/global/targetHttpsProxies/api-lb-https-proxy",
            "name": "api-lb-https-proxy",
            "project": "revieve-public",
            "proxy_bind": false,
            "proxy_id": 7771246470547606687,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/revieve-public/global/targetHttpsProxies/api-lb-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/revieve-public/global/sslCertificates/api-lb-cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/revieve-public/global/urlMaps/api-lb-url-map"
          },
          "dependencies": [
            "google_cloud_run_service.doit_easily_cloudrun_service",
            "google_compute_region_network_endpoint_group.api_lb_neg",
            "google_compute_url_map.url_map",
            "google_iap_brand.iap_brand",
            "google_iap_client.iap_client",
            "module.api-lb.google_compute_backend_service.default",
            "module.api-lb.google_compute_managed_ssl_certificate.default",
            "module.api-lb.google_compute_ssl_certificate.default",
            "module.api-lb.google_compute_url_map.default",
            "module.api-lb.random_id.certificate"
          ]
        }
      ]
    },
    {
      "module": "module.api-lb",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-05-01T07:39:12.929-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "gjeGJounU4w=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/revieve-public/global/urlMaps/api-lb-https-redirect",
            "map_id": 1402803074390716927,
            "name": "api-lb-https-redirect",
            "path_matcher": [],
            "project": "revieve-public",
            "self_link": "https://www.googleapis.com/compute/v1/projects/revieve-public/global/urlMaps/api-lb-https-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}